src/components/hero/hero.css
.hero-container {
  height: 100vh;
  margin-left: 10%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: flex-start;
  gap: 40px;
}

.hero-text {
  overflow: hidden;
}

.contact-me {
  cursor: pointer;
  width: 168px;
  height: 58px;
  border-radius: 30px;
  background: #0e1154;
  display: flex;
  justify-content: center;
  align-items: center;
}
.contact-me-container {
  opacity: 0;
  animation: fadeIn 1s ease-in-out 7.5s forwards;
}

.contact-me-container:hover {
  transform: scale(1.03);
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.line1 {
  color: rgb(255 140 245);
  font-weight: 700;
  width: 17rem;
  overflow: hidden;
  white-space: nowrap;
  border-right: 2px solid transparent;
  animation: typing 2.5s steps(30) 0.5s 1 normal both,
    blink-caret 700ms steps(44) infinite normal, after 0.2s 1 normal both 3s;
}
.line2 {
  width: 46rem;
  overflow: hidden;
  white-space: nowrap;
  border-right: 2px solid transparent;
  animation: typing2 4s steps(60) 3.5s 1 normal both,
    blink-caret 700ms steps(70) infinite normal 3s,
    after 0.2s 1 normal both 7.5s;
}

/* The typing effect */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 18rem;
  }
}

@keyframes typing2 {
  from {
    width: 0;
  }
  to {
    width: 48rem;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from {
    border-right: 2px solid transparent;
  }
  to {
    border-right: 2px solid rgba(255, 255, 255, 0.75);
  }
}

@keyframes after {
  to {
    border-right-color: transparent;
  }
}

.arrow-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  position: absolute;
  bottom: 10%;
  & > img {
    width: 50px;
    height: 50px;
  }
}

#arrow {
  opacity: 0;
  animation: arrow 1s ease-in-out infinite 8.5s,
    show-arrow 1s ease-in-out 8.5s forwards;
}
@keyframes show-arrow {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes arrow {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(0);
  }
}

/* blobs from https://codepen.io/LA_water/pen/rNaYZBb */
.blob-container {
  width: 100vw;
  position: absolute;
  top: 0;
  overflow: hidden;
  view-timeline-axis: block;
  animation: linear fade-blob both;
  animation-timeline: --page-scroll;
  animation-range: 45% 55%;
}
.blob {
  background: #90909a4a;
  height: 200px;
  width: 200px;
  border-radius: 30% 50% 20% 40%;
  animation: transform 20s ease-in-out infinite both alternate,
    movement_one 40s ease-in-out infinite both;
  opacity: 0.7;
  position: fixed;
  left: 70%;
  top: 50%;
  z-index: 0;
}

.shape1 {
  height: 500px;
  width: 500px;
  left: -200px;
  top: -150px;
  transform: rotate(-180deg);
  animation: transform 30s ease-in-out infinite both alternate,
    movement_two 60s ease-in-out infinite both;
}

.shape2 {
  height: 350px;
  width: 350px;
  left: 500px;
  top: -150px;
  transform: rotate(-180deg);
  animation: transform 30s ease-in-out infinite both alternate,
    movement_two 60s ease-in-out infinite both;
}

@keyframes transform {
  0%,
  100% {
    border-radius: 33% 67% 70% 30% / 30% 30% 70% 70%;
  }
  20% {
    border-radius: 37% 63% 51% 49% / 37% 65% 35% 63%;
  }
  40% {
    border-radius: 36% 64% 64% 36% / 64% 48% 52% 36%;
  }
  60% {
    border-radius: 37% 63% 51% 49% / 30% 30% 70% 70%;
  }
  80% {
    border-radius: 40% 60% 42% 58% / 41% 51% 49% 59%;
  }
}

@keyframes movement_one {
  0%,
  100% {
    transform: none;
  }
  50% {
    transform: translate(50%, 20%) rotateY(10deg) scale(1.2);
  }
}

@keyframes movement_two {
  0%,
  500% {
    transform: none;
  }
  50% {
    transform: translate(50%, 20%) rotate(-200deg) scale(1.2);
  }
}

@keyframes fade-blob {
  from {
    opacity: 0.7;
  }
  to {
    opacity: 0;
  }
}

